<resources>
    <string name="app_name">News App Stage 2</string>
    <string name="no_news">No News Found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="section">Football</string>
    <string name="date">Jun 18, 2018</string>
    <string name="time">11:00 AM</string>
    <string name="title">France has won Football world cup</string>
    <string name="author">Ali Williams</string>


    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>


    <string name="settings_search_label">Search</string>
    <string name="settings_search_default" translatable="false"></string>
    <string name="settings_search_key" translatable="false">SearchTerm</string>


    <!-- Strings For Order-By Preference-->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_relevance_value</string>

    <!-- Label for order-by title option -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>

    <!-- Label for order-by most recent option-->
    <string name="settings_order_by_most_recent_label">Most Recent</string>
    <string name="settings_order_by_most_recent_value" translatable="false">newest</string>

</resources>
